galaxy s8 fix 2
longer windows were cut off on bottom, added extra margin to allow extra space at bottom

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -83,6 +83,7 @@ body {
 .window {
   background-color: rgb(212, 208, 200);
   padding: 1rem;
+  margin-bottom: 2rem;
   width: inherit;
   min-width: inherit;
   max-width: inherit;
